<resources>
    <string name="app_name">我的音乐播放器</string>
    <string name="accountTipString">账 号 ：</string>
    <string name="passwdTipString">密 码 ：</string>
    <string name="loginButton">登 录</string>
    <string name="register">注册</string>
    <string name="forgetPasswd">忘记密码</string>
    <string name="LoginSuccess">hello,</string>
    <string name="myCollection">我的收藏</string>
    <string name="musicList">音乐列表</string>
    <string name="isPlaying">暂无播放</string>
    <string name="ip">IP：</string>
    <string name="submit">SUBMIT</string>
</resources>